resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    @apply h-full w-full;
}

body {
    @apply h-full w-full font-sans antialiased dark:bg-base-100 dark:text-base-content;
}

.bg-gradient-cover {
    @apply bg-gradient-to-t from-neutral to-transparent;
}

.kbd {
    @apply inline-flex justify-center rounded border border-gray-300 bg-gray-200 px-1 py-0.5 align-middle text-sm dark:border-base-content/20 dark:bg-neutral;
}

.btn-primary {
    @apply flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 dark:hover:bg-indigo-400 dark:bg-indigo-500 dark:focus-visible:outline-indigo-500;
}

.form-input {
    @apply block w-full rounded-md border-0 py-1.5 pl-3 pr-10 text-gray-900 ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6 dark:bg-white/5 dark:ring-white/10 dark:focus:ring-indigo-500 dark:text-white;
}

.hero-banner {
    height: 35vh;
    width: 100%;
    position: relative;

    &::before {
        content: '';
        position: absolute;
        background: linear-gradient(0deg, rgb(42, 48, 60), rgba(42, 48, 60, 0) 100%);
        inset: 0px;
        height: initial;
        z-index: 1;
    }

    & > .hero-copy {
        @apply relative z-[2] mx-auto max-w-7xl px-2 pb-[10px] pt-[160px] text-center dark:text-white;

        & > h1 {
            @apply text-6xl font-black;
        }

        & > .scroll-indicator {
            @apply relative mx-auto h-[80px] w-[2px];

            & > span {
                content: '';
                display: block;
                position: absolute;
                top: -40px;
                left: 0px;
                animation-name: scrollIndicator;
                animation-duration: 2s;
                animation-iteration-count: infinite;
                animation-timing-function: cubic-bezier(0, 0.42, 0.2, 0.99);
                animation-play-state: running;
                width: 2px;
                height: 0px;
                background: rgb(255, 255, 255);
            }
        }
    }
}

.hexagon {
    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
    @apply flex items-center justify-center bg-indigo-500 p-2 font-semibold text-white;
}

@keyframes scrollIndicator {
    0% {
        top: 0px;
        height: 0px;
    }

    40% {
        top: 0px;
        height: 80px;
    }

    85% {
        top: 80px;
        height: 0px;
    }

    100% {
        top: 80px;
        height: 0px;
    }
}

